--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .cabecalho {
-  background: #4a90e2;
+  background:rgba(130, 28, 170, 0.84);
   color: #fff;
   text-align: center;
   padding: 2rem 1rem;
