--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 
 .cabecalho {
   background:rgba(140, 69, 168, 0.84);
-  color: #fff;
+  color: #b139ab65;
   text-align: center;
   padding: 2rem 1rem;
 }
